@@ -1,3 +1,9 @@
+2008-02-26  Stefan Kost  <ensonic@users.sf.net>
+
+	* src/BuzzMachineLoader/BuzzMDKHelper.cpp:
+	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
+	  Comment and logging changes.
+
 2008-02-23  Stefan Kost  <ensonic@users.sf.net>
 
 	* TODO:
